CSS changes should reduce padding around table cell contents and eliminate the bug with a line wrapping on top of itself.
git-svn-id: https://svn.mcs.anl.gov/repos/darshan/trunk@715 3b7491f3-a168-0410-bf4b-c445ed680a29

--- a/darshan-util/doc/docbook-xsl.css
+++ b/darshan-util/doc/docbook-xsl.css
@@ -97,7 +97,7 @@ div.navfooter hr {
 }
 
 body td {
-  line-height: 0;
+  line-height: 1;
 }
 
 body th {
@@ -249,6 +249,15 @@ div.informaltable tbody
     /* No effect in IE6. */
     border-top: 3px solid #527bbd;
     border-bottom: 3px solid #527bbd;
+}
+/* This part shinks the padding inside tables since all the content is
+   is wrapped in <p> tags. */
+div.informaltable p
+{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-right: 10px;
+    margin-left: 10px;
 }
 div.table thead, div.table tfoot,
 div.informaltable thead, div.informaltable tfoot
